Add partial support for managing apps

--- a/espark-react/src/i18n/en.json
+++ b/espark-react/src/i18n/en.json
@@ -3,6 +3,10 @@
     "resources.devices.edit"             : "Edit Device",
     "resources.devices.details"          : "Device Details",
     "resources.telemetry"                : "Telemetry",
+    "resources.apps"                     : "Applications",
+    "resources.apps.create"              : "Create Application",
+    "resources.apps.edit"                : "Edit Application",
+    "resources.apps.details"             : "Application Details",
     "labels.device.status"               : "Status",
     "labels.device.id"                   : "Device ID",
     "labels.device.displayName"          : "Display Name",
