Refactor notification; support latching relay

--- a/espark-react/src/i18n/en.json
+++ b/espark-react/src/i18n/en.json
@@ -4,9 +4,16 @@
     "resources.devices.details"          : "Device Details",
     "resources.telemetry"                : "Telemetry",
     "resources.apps"                     : "Applications",
-    "resources.apps.create"              : "Create Application",
     "resources.apps.edit"                : "Edit Application",
     "resources.apps.details"             : "Application Details",
+    "resources.notifications"            : "Notifications",
+    "resources.notifications.create"     : "Create Notification",
+    "resources.notifications.edit"       : "Edit Notification",
+    "resources.notifications.details"    : "Notification Details",
+    "resources.triggers"                 : "Triggers",
+    "resources.triggers.create"          : "Create Trigger",
+    "resources.triggers.edit"            : "Edit Trigger",
+    "resources.triggers.details"         : "Trigger Details",
     "labels.device.status"               : "Status",
     "labels.device.id"                   : "Device ID",
     "labels.device.displayName"          : "Display Name",
@@ -16,14 +23,25 @@
     "labels.device.capabilities.tip"     : "Define device-specific capabilities",
     "labels.device.parameters"           : "Parameters",
     "labels.device.parameters.tip"       : "Define device-specific parameters in JSON format",
+    "labels.device.batteryLevel"         : "Battery Level",
     "labels.device.lastSeen"             : "Last Seen",
     "labels.telemetry.deviceId"          : "Device ID",
     "labels.telemetry.deviceDisplayName" : "Display Name",
     "labels.telemetry.timestamp"         : "Timestamp",
     "labels.telemetry.dataType"          : "Data Type",
     "labels.telemetry.value"             : "Value",
-    "labels.apps.appName"                : "Application Name",
-    "labels.apps.appVersion"             : "Application Version",
+    "labels.app.appName"                : "Application Name",
+    "labels.app.appVersion"             : "Application Version",
+    "labels.notification.name"           : "Notification Name",
+    "labels.notification.provider"       : "Provider",
+    "labels.notification.config"         : "Configuration",
+    "labels.notification.config.tip"     : "Define notification configuration in JSON format",
+    "labels.trigger.name"                : "Trigger Name",
+    "labels.trigger.deviceId"            : "Target Device",
+    "labels.trigger.dataType"            : "Data Type",
+    "labels.trigger.condition"           : "Condition",
+    "labels.trigger.value"               : "Value",
+    "labels.trigger.notifications"       : "Notifications",
     "placeholders.notSet"                : "(Not set)",
     "errors.required"                    : "{{field}} is required.",
     "errors.invalidFormat"               : "{{field}} has an invalid format.",
